// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataCardStation.vue renders correctly default values 1`] = `
<div
  class="overviewcard"
>
  <div
    class="overviewcard__description"
  >
    <vs-list-stub
      class="additional-Info"
    >
      <vs-list-item-stub
        class="additional-Info__Icon"
        iconpack="material-icons"
      >
        <i
          class="fas fa-lock"
          title=""
        />
      </vs-list-item-stub>
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="Latitude"
      >
        <span>
          0
        </span>
      </vs-list-item-stub>
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="Longitude"
      >
        <span>
          0
        </span>
      </vs-list-item-stub>
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="Height"
      >
        <span>
          0
        </span>
      </vs-list-item-stub>
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="Proyect Name"
      >
        <span>
          
        </span>
      </vs-list-item-stub>
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="Location"
      >
        <span>
          
        </span>
      </vs-list-item-stub>
    </vs-list-stub>
     
    <vs-list-stub
      class="variables-Info"
    >
      <vs-list-header-stub
        color="primary"
        icon="info"
        iconpack="material-icons"
        title="Variables Info"
      />
       
    </vs-list-stub>
  </div>
</div>
`;

exports[`dataCardStation.vue renders correctly with full info 1`] = `
<div
  class="overviewcard"
>
  <div
    class="overviewcard__description"
  >
    <vs-list-stub
      class="additional-Info"
    >
      <vs-list-item-stub
        class="additional-Info__Icon"
        iconpack="material-icons"
      >
        <i
          class="fas fa-unlock"
          title="open"
        />
      </vs-list-item-stub>
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="Latitude"
      >
        <span>
          30
        </span>
      </vs-list-item-stub>
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="Longitude"
      >
        <span>
          10
        </span>
      </vs-list-item-stub>
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="Height"
      >
        <span>
          40
        </span>
      </vs-list-item-stub>
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="Proyect Name"
      >
        <span>
          proyect test 1
        </span>
      </vs-list-item-stub>
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="Location"
      >
        <span>
          location test 1
        </span>
      </vs-list-item-stub>
    </vs-list-stub>
     
    <vs-list-stub
      class="variables-Info"
    >
      <vs-list-header-stub
        color="primary"
        icon="info"
        iconpack="material-icons"
        title="Variables Info"
      />
       
      <vs-list-item-stub
        iconpack="material-icons"
        title="name test 1"
      >
        <span>
          <strong>
            observations
          </strong>
          : 
        </span>
         
        <span>
          <strong>
            Units
          </strong>
          : m
        </span>
      </vs-list-item-stub>
      <vs-list-item-stub
        iconpack="material-icons"
        title="name test 2"
      >
        <span>
          <strong>
            observations
          </strong>
          : 
        </span>
         
        <span>
          <strong>
            Units
          </strong>
          : s
        </span>
      </vs-list-item-stub>
    </vs-list-stub>
  </div>
</div>
`;
